<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotesManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">user name</string>
    <string name="user_passwd">user passwd</string>
    <string name="user_mail">user email</string>
    <string name="explore_database">database</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_users_db">Get users</string>
    <string name="get_notes_db">Get notes</string>
    <string name="user_by_id">by id: </string>
    <string name="add_new_note">Add note</string>
    <string name="signed_user_name">Signed:</string>
    <string name="note_title">Title</string>
    <string name="note_text">Text of note</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="action_exit">Exit</string>
    <string name="action_ok">OK</string>
    <string name="sign_out">Sign out.</string>

</resources>
