<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_fragment"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.dmcs.mecin.notesmanager.SignUp">

    <!-- TODO: Update blank fragment layout -->
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <LinearLayout

        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/user_name_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/user_email_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_mail"
            android:inputType="text" />

        <EditText
            android:id="@+id/user_passwd_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_passwd"
            android:inputType="textPassword"
            />



        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"/>
        </LinearLayout>


</LinearLayout>
