<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.dmcs.mecin.notesmanager.MainNotes"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:gravity="left"
            android:id="@+id/signed_user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signed_user_name"

            />

        <TextView
            android:gravity="right"
            android:clickable="true"
            android:textColor="@android:color/holo_blue_dark"

            android:id="@+id/sign_out_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_out"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_note_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_note"
            />

        <Button
            android:id="@+id/fetch_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_notes_db"/>


    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_marginTop="10dp"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    </ListView>


</LinearLayout>
