<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="pl.dmcs.mecin.notesmanager.SignIn">

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/user_name_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="text"
        />

        <EditText
            android:id="@+id/user_passwd_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/user_passwd"
            android:inputType="textPassword"
        />
    </LinearLayout>
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />

</LinearLayout>
