<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_notes_manager"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context=".NotesManager">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="150dip"
        android:layout_height="fill_parent">

        <Button

            android:id="@+id/signin_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            />

        <Button

            android:id="@+id/signup_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            />

        <Button

            android:id="@+id/database_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore_database"
            />




    </LinearLayout>


</LinearLayout>
